[tool.poetry]
name = "gayatri"
version = "0.1.0"
description = ""
authors = ["Yusuke Shimizu <44394399+rabhareit@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.6.7"
mysql-connector-python = "^8.0.21"
configparser = "^5.0.0"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
typing = "^3.7.4"
python-multipart = "^0.0.5"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
